2000-09-14  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* graphics.c (map_position), graph3d.c (map_position): Fix
 	off-by-one bug in treatment of term->{x,y}max when translating
 	'screen' coordinates.

2000-08-02  Petr Mikulik <mikulik@physics.muni.cz>
	* src/graph3d.c src/graphics.c src/set.c src/show.c src/term.c
	  src/plot.h docs/gnuplot.doc term/fig.trm:
	allow setting arrow head(s) sizes --- new keywords `heads` and
	`{size <length>,<angle>}` for `set arrow`.
	Note: not implemented for TeX-like terminals, which draw arrows
	by their own method.

2000-07-25  Petr Mikulik <mikulik@physics.muni.cz>

	* src/graphics.c src/plot.c src/plot2d.c src/plot3d.c src/plot.h
	  src/graph3d.c src/os2/gclient.c term/pm.trm term/post.trm:
	avoid writing filenames in keys as enhanced text in enhanced-text
	capable terminals (postscript and Presentation Manager); i.e., don't 
	write file "a_123.dat" with '1' as subscript of 'a'.
	  The method used sets a new flag `this_plot->title_no_enhanced = 1;`
	if the title of filename or function cannot be enhanced. When keys are
	typeset, then new global global variable `ignore_enhanced_text` is set.
	Then enhanced terminals decide whether to use normal-text or
	enhanced-text writing method. 
	  Note: There was another method proposed to solve this problem: all
	escape characters to be backslashed on reading of the title. However,
	this would not work if the same plot is replotted subsequently on
	enhanced and non-enhanced terminals.

2000-06-23  Johannes Zellner <johannes@zellner.org>

	* src/gplt_x11.c: repaired `selection' (by left mouse).
	I really don't know when and how this got broken!

2000-06-15  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/cgm.trm(CGM_option): reject linewidth zero to avoid
	infinite looping in CGM_dashed_vector(), later

2000-06-13  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/datafile.c(df_gets): prompt visibly for inline data, if
	in interactive mode.
