@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: graph3d.c,v 1.29 2000/09/14 13:23:56 broeker Exp $"); }
+static char *RCSid() { return RCSid("$Id: graph3d.c,v 1.30 2000/09/20 00:59:25 joze Exp $"); }
 #endif
 
 /* GNUPLOT - graph3d.c */
@@ -120,6 +120,9 @@ static void key_sample_line __PROTO((int xl, int yl));
 static void key_sample_point __PROTO((int xl, int yl, int pointtype));
 static void key_text __PROTO((int xl, int yl, char *text));
 
+static void get_arrow3d(struct arrow_def* arrow, unsigned int* sx, unsigned int* sy, unsigned int* ex, unsigned int* ey);
+static int map3d_getposition __PROTO((struct position* pos, const char* what, double* xpos, double* ypos, double* zpos));
+static void map3d_position_r __PROTO((struct position* pos1, struct position* pos2, unsigned int* x, unsigned int* y, const char* what));
 
 /*
  * The Amiga SAS/C 6.2 compiler moans about macro envocations causing
@@ -410,6 +413,37 @@ int count;
     yscaler = ((ytop - ybot) * 4L) / 7L;
 }
 
+static void
+get_arrow3d(arrow, sx, sy, ex, ey)
+struct arrow_def* arrow;
+unsigned int* sx;
+unsigned int* sy;
+unsigned int* ex;
+unsigned int* ey;
+{
+    map3d_position(&(arrow->start), sx, sy, "arrow");
+    if (arrow->relative) {
+	if (arrow->start.scalex == arrow->end.scalex &&
+	    arrow->start.scaley == arrow->end.scaley &&
+	    arrow->start.scalez == arrow->end.scalez) {
+	    /* coordinate systems are equal. The advantage of
+	     * handling this special case is that it works also
+	     * for logscale (which might not work otherwise, if
+	     * the relative arrows point downwards for example) */
+	    struct position delta_pos;
+	    delta_pos = arrow->start;
+	    delta_pos.x += arrow->end.x;
+	    delta_pos.y += arrow->end.y;
+	    delta_pos.z += arrow->end.z;
+	    map_position(&delta_pos, ex, ey, "arrow");
+	} else {
+	    map3d_position_r(&(arrow->start), &(arrow->end), ex, ey, "arrow");
+	}
+    } else {
+	map3d_position(&(arrow->end), ex, ey, "arrow");
+    }
+}
+
 #if 0
 /* not used ; anyway, should be done using bitshifts and squares,
  * rather than iteratively
@@ -609,27 +643,12 @@ int quick;			/* !=0 means plot only axes etc., for quick rotation */
     for (this_arrow = first_arrow; this_arrow != NULL;
 	 this_arrow = this_arrow->next) {
 	unsigned int sx, sy, ex, ey;
-	extern int curr_arrow_headlength;
-	extern double curr_arrow_headangle;
 
 	if (this_arrow->layer)
 	    continue;
-	map3d_position(&this_arrow->start, &sx, &sy, "arrow");
-	map3d_position(&this_arrow->end, &ex, &ey, "arrow");
+	get_arrow3d(this_arrow, &sx, &sy, &ex, &ey);
 	term_apply_lp_properties(&(this_arrow->lp_properties));
-	curr_arrow_headlength = 0;
-	if (this_arrow->headsize.x > 0) { /* set head length+angle for term->arrow */
-	    int itmp, x1, x2;
-	    double savex = this_arrow->headsize.x;
-	    curr_arrow_headangle = this_arrow->headsize.y;
-	    this_arrow->headsize.y = 1.0; /* any value, just avoid log y */
-	    map_position(&this_arrow->headsize, &x2, &itmp, "arrow");
-	    this_arrow->headsize.x = 0; /* measure length from zero */
-	    map_position(&this_arrow->headsize, &x1, &itmp, "arrow");
-	    curr_arrow_headlength = x2 - x1;
-	    this_arrow->headsize.y = curr_arrow_headangle; /* restore the angle */
-	    this_arrow->headsize.x = savex; /* restore the length */
-	}
+	apply_head_properties(&(this_arrow->headsize));
 	(*t->arrow) (sx, sy, ex, ey, this_arrow->head);
     }
 
@@ -1036,9 +1055,9 @@ int quick;			/* !=0 means plot only axes etc., for quick rotation */
 
 	if (this_arrow->layer == 0)
 	    continue;
-	map3d_position(&this_arrow->start, &sx, &sy, "arrow");
-	map3d_position(&this_arrow->end, &ex, &ey, "arrow");
+	get_arrow3d(this_arrow, &sx, &sy, &ex, &ey);
 	term_apply_lp_properties(&(this_arrow->lp_properties));
+	apply_head_properties(&(this_arrow->headsize));
 	(*t->arrow) (sx, sy, ex, ey, this_arrow->head);
     }
 
@@ -1910,6 +1929,57 @@ struct lp_style_type grid;
     }
 }
 
+static int
+map3d_getposition(pos, what, xpos, ypos, zpos)
+struct position *pos;
+const char *what;
+double* xpos;
+double* ypos;
+double* zpos;
+{
+    int screens = 0;		/* need either 0 or 3 screen co-ordinates */
+
+    switch (pos->scalex) {
+    case first_axes:
+    case second_axes:
+	*xpos = LogScale(*xpos, is_log_x, log_base_log_x, what, "x");
+	break;
+    case graph:
+	*xpos = min_array[FIRST_X_AXIS] +
+	    *xpos * (max_array[FIRST_X_AXIS] - min_array[FIRST_X_AXIS]);
+	break;
+    case screen:
+	++screens;
+    }
+
+    switch (pos->scaley) {
+    case first_axes:
+    case second_axes:
+	*ypos = LogScale(*ypos, is_log_y, log_base_log_y, what, "y");
+	break;
+    case graph:
+	*ypos = min_array[FIRST_Y_AXIS] +
+	    *ypos * (max_array[FIRST_Y_AXIS] - min_array[FIRST_Y_AXIS]);
+	break;
+    case screen:
+	++screens;
+    }
+
+    switch (pos->scalez) {
+    case first_axes:
+    case second_axes:
+	*zpos = LogScale(*zpos, is_log_z, log_base_log_z, what, "z");
+	break;
+    case graph:
+	*zpos = min_array[FIRST_Z_AXIS] +
+	    *zpos * (max_array[FIRST_Z_AXIS] - min_array[FIRST_Z_AXIS]);
+	break;
+    case screen:
+	++screens;
+    }
+
+    return screens;
+}
 
 void
 map3d_position(pos, x, y, what)
@@ -1920,46 +1990,8 @@ const char *what;
     double xpos = pos->x;
     double ypos = pos->y;
     double zpos = pos->z;
-    int screens = 0;		/* need either 0 or 3 screen co-ordinates */
-
-    switch (pos->scalex) {
-    case first_axes:
-    case second_axes:
-	xpos = LogScale(xpos, is_log_x, log_base_log_x, what, "x");
-	break;
-    case graph:
-	xpos = min_array[FIRST_X_AXIS] +
-	    xpos * (max_array[FIRST_X_AXIS] - min_array[FIRST_X_AXIS]);
-	break;
-    case screen:
-	++screens;
-    }
-
-    switch (pos->scaley) {
-    case first_axes:
-    case second_axes:
-	ypos = LogScale(ypos, is_log_y, log_base_log_y, what, "y");
-	break;
-    case graph:
-	ypos = min_array[FIRST_Y_AXIS] +
-	    ypos * (max_array[FIRST_Y_AXIS] - min_array[FIRST_Y_AXIS]);
-	break;
-    case screen:
-	++screens;
-    }
-
-    switch (pos->scalez) {
-    case first_axes:
-    case second_axes:
-	zpos = LogScale(zpos, is_log_z, log_base_log_z, what, "z");
-	break;
-    case graph:
-	zpos = min_array[FIRST_Z_AXIS] +
-	    zpos * (max_array[FIRST_Z_AXIS] - min_array[FIRST_Z_AXIS]);
-	break;
-    case screen:
-	++screens;
-    }
+    /* need either 0 or 3 screen co-ordinates */
+    int screens = map3d_getposition(pos, what, &xpos, &ypos, &zpos);
 
     if (screens == 0) {
 	map3d_xy(xpos, ypos, zpos, x, y);
@@ -1978,6 +2010,41 @@ const char *what;
     return;
 }
 
+static void
+map3d_position_r(pos_s, pos_e, x, y, what)
+struct position *pos_s;
+struct position *pos_e;
+unsigned int *x, *y;
+const char *what;
+{
+    double xpos_s = pos_s->x;
+    double ypos_s = pos_s->y;
+    double zpos_s = pos_s->z;
+    int screens1 = map3d_getposition(pos_s, what, &xpos_s, &ypos_s, &zpos_s);
+
+    double xpos_e = pos_e->x;
+    double ypos_e = pos_e->y;
+    double zpos_e = pos_e->z;
+    int screens2 = map3d_getposition(pos_e, what, &xpos_e, &ypos_e, &zpos_e);
+
+    if (screens1 == 0 && screens2 == 0) {
+	map3d_xy(xpos_s + xpos_e, ypos_s + ypos_e, zpos_s + zpos_e, x, y);
+	return;
+    }
+    if (screens1 != 3 || screens2 != 3) {
+	graph_error("Cannot mix screen co-ordinates with other types");
+    } {
+	register struct termentry *t = term;
+	*x = pos_s->x + pos_e->x * (t->xmax -1) + 0.5;
+	*y = pos_s->y + pos_e->y * (t->ymax -1) + 0.5;
+    }
+    /* TODO:
+     *   would it make any sense in 3d to mix screen
+     *   with non-screen coordinates ? (joze)
+     */
+
+    return;
+}
 
 /*
  * these code blocks were moved to functions, to make the code simpler
